Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13197

[REG 3.2.2 -> 3.3.0] Help mode does not show sidebar

    XMLWordPrintable

Details

    • c6d8d4bee4aca76ebd9444e5dc93dea17b026fa7

    Description

      1. Start Creator with clean settings.
      2. Click on "Get Started Now".
        Creator will switch to Help mode and display "Qt Creator Manual". By default will not display the sidebar.

      Creator should show the sidebar by default, just as Creator 3.2 did.

      Found by Squish test tst_WELP01.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-13197
        # Subject Branch Project Status CR V

        Activity

          People

            con Eike Ziller
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes