Help: Fix initial state of side bar and external window size

In the case of clean settings.

Change-Id: Ie230cc6a20a932c5917c4a9af26f94c0292e5ada
Task-number: QTCREATORBUG-13197
Reviewed-by: Robert Loehning <robert.loehning@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>